--- a/src/views/UserContent/_ProfileContent.scss
+++ b/src/views/UserContent/_ProfileContent.scss
@@ -8,6 +8,7 @@
         .menu-user-content-left,
         .menu-user-content-right{
             width: 50%;
+            padding-left: 30px;
         }
     }
 }
