--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -9,8 +9,9 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: absolute;
     .footer-center {
-        @include mix.center(nth(var.$hundreds, 8));
+        @include mix.center(var.$per-10);
         text-align: center;
+        margin-bottom: 20px;
         .footer-logo {
             margin-bottom: var.$mp-i;
             font-weight: nth(var.$fw, 9);
