--- a/src/views/Home/_Home.scss
+++ b/src/views/Home/_Home.scss
@@ -2,31 +2,32 @@
 @use '../../scss/utilities/mixings' as mix;
 
 .home-content {
-    @include mix.center(nth(var.$medias, 3));
+    @include mix.center(1440px);
     height: var.$per-10;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     .home-header-picture {
         display: flex;
         margin-top: var.$mp-l + var.$mp-f;
         margin-bottom: var.$mp-l + var.$mp-f;
+        
         .home-picture {
             width: var.$per-4;
             height: nth(var.$hundreds , 5) + (nth(var.$hundreds , 1) / 2);
             margin: var.$mp-h;
-            // background-size: cover;
-            
-            background-attachment: fixed;
-            background-size: contain;
+            background-size: cover;
+            background-repeat: no-repeat;
+            border-radius: 110px 10px 110px 10px;
         }
         .first-picture{
             background-image: url('../../images/plate1.jpg');
         }
         .second-picture{
             background-image: url('../../images/plate2.jpg');
+            background-position-y: -82px;
         }
         .third-picture{
             background-image: url('../../images/plate3.jpg');
-            background-position-x: -180px;
+            background-position-y: -22px;
         }
     }
     .home-body-presentation {
@@ -41,10 +42,11 @@
             height: 600px;
             background-image: url('../../images/plate4.jpg');
             margin-left: auto;
-            background-attachment: fixed;
+            //background-attachment: fixed;
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
+            border-radius: 10px 100px 10px 300px;
         }
         .title-presentation {
             font-size: var.$size-p;
@@ -58,19 +60,19 @@
         background-color: nth(var.$grey, 2);
         opacity: .6;
         width: var.$per-10;
-        height: nth(var.$hundreds , 2) + var.$mp-nn;
-        margin-top: var.$mp-l + var.$mp-f;
-        margin-bottom: var.$mp-l + var.$mp-f;
+        height: 324px;
+        margin-top: 100px;
+        margin-bottom: 100px;
         display: flex;
         align-items: center;
         .hour-circle {
             background: var.$white;
             @include mix.center(var.$per-2);
-            height: var.$per-8;
-            border-radius: var.$per-5;
+            height: var.$per-9;
             text-align: center;
+            clip-path: circle(50% at 50% 50%);
             .hour-content{
-                margin-top: 3%;
+                margin-top: 10%;
                 .hour-icon {
                     margin-bottom: var.$mp-f;
                     font-size: var.$size-k;
