--- a/src/views/Menu/_Menu.scss
+++ b/src/views/Menu/_Menu.scss
@@ -1,6 +1,9 @@
+@use '../../scss/utilities/variables' as var;
+@use '../../scss/utilities/mixings' as mix;
+
 .menu {
     height: 700px;
-    margin-top: 100px;
+    margin-top: 130px;
     .menu-title {
         text-align: center;
         font-size: 26px;
@@ -20,6 +23,7 @@
         .menu-content-left,
         .Menu-content-right {
             width: 40%;
+            padding-left: 70px;
             .food {
                 margin-bottom: 20px;
                 .food-title {
