--- a/src/views/UserContent/OrderHistory/_OrderHistory.scss
+++ b/src/views/UserContent/OrderHistory/_OrderHistory.scss
@@ -1,16 +1,20 @@
 .order-history{
-    width: 80%;
+    width: 100%;
     height: 100%;
     margin: auto;
-    //background-color: brown;
+    overflow: scroll;
     .history-title{
         font-size: 24px;
         font-weight: 500;
         padding-top: 20px;
+        position: relative;
+        left: 98px;
+        margin-bottom: 20px;
     }
     .order{
-        //background-color: chocolate;
         margin-top: 10px;
+        width: 800px;
+        margin: auto;
         .order-title{
             font-size: 15px;
             font-weight: 700;
@@ -27,6 +31,7 @@
             left: 480px;
             bottom: 23px;
             cursor: pointer;
+            margin: 50px;
             &:hover{
                 background-color: green;
             }
@@ -34,14 +39,13 @@
                 display:none;
             }
         }
-        
-        .order-cancel{
-            margin: 50px;
-        }
     }
     .collapse{
         .card{
+            margin-bottom: 20px;
             .card-body{
+                height: 100%;
+                overflow: scroll;
                 .ticket-order{
 
                 }
