--- a/src/views/UserContent/Shop/_Shop.scss
+++ b/src/views/UserContent/Shop/_Shop.scss
@@ -1,15 +1,18 @@
+@use '../../../scss/utilities/variables' as var;
+@use '../../../scss/utilities/mixings' as mix;
+
 .shop-component{
     display: flex;
     width: auto;
-    height: 100%;
+    height: 90%;
     flex-direction: column;
     .shop-panel{
         display: flex;
         .button-panel{
-            width: 80%;
-            height: 40px;
-            margin: 14px auto;
-            padding: 10px;
+            width: auto;
+            height: auto;
+            margin: 16px auto;
+            padding: 10px 20px;
             cursor: pointer;
             text-decoration: none;
             text-align: center;
@@ -24,7 +27,8 @@
             }
             &:hover{
                 border-radius: 10px;
-                background-color: cadetblue;
+                background-color: nth(var.$grey, 2);
+                //background-color: cadetblue;
                 color: white;
                 em,
                 a{
