--- a/src/views/UserContent/OrderHistory/_OrderHistory.scss
+++ b/src/views/UserContent/OrderHistory/_OrderHistory.scss
@@ -4,6 +4,7 @@
     margin: auto;
     overflow: scroll;
     .history-title{
+        width: 300px;
         font-size: 24px;
         font-weight: 500;
         padding-top: 20px;
