--- a/src/views/Gallery/_Gallery.scss
+++ b/src/views/Gallery/_Gallery.scss
@@ -1,7 +1,9 @@
+@use '../../scss/utilities/variables' as var;
+@use '../../scss/utilities/mixings' as mix;
 .gallery{
     background-image: url('https://user-images.githubusercontent.com/56218293/117150201-3897eb00-adb8-11eb-9acd-c8d2c61ba837.png');
-    //overflow: scroll;
-    margin-top: 100px;
+    width: 100%;
+    margin-top: 50px;
     background-repeat: no-repeat;
     background-position: center;
     height: 800px;
@@ -20,5 +22,41 @@
         text-align: center;
         filter: alpha(opacity=60);
         filter: drop-shadow(2px 4px 6px black);
+    }
+}
+
+/*
+*
+*
+*/
+
+/*----- Tablet -----*/
+
+
+/*Portrait*/
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
+
+    .gallery{
+        .gallery-caption{
+            width: 400px;
+        }
+    }
+}
+
+/*----- movil -----*/
+
+
+/*Portrait*/
+
+
+/*Default*/
+
+@media (max-width: 575.98px) and (orientation:portrait) {
+
+    .gallery{
+        .gallery-caption{
+            width: auto;
+        }
     }
 }
