--- a/src/views/Menu/_Menu.scss
+++ b/src/views/Menu/_Menu.scss
@@ -1,34 +1,30 @@
 @use '../../scss/utilities/variables' as var;
 @use '../../scss/utilities/mixings' as mix;
-
 .menu {
-    height: 700px;
-    margin-top: 130px;
+    height: 800px;
+    margin-top: 60px;
+    margin-bottom: 60px;
     .menu-title {
         text-align: center;
         font-size: 26px;
-        padding-top: 50px;
+        padding-top: 130px;
     }
     .menu-content {
         background: white;
         display: flex;
         align-items: center;
         height: 80%;
-        margin-top: auto;
-        margin-bottom: auto;
-        margin-left: auto;
-        margin-right: auto;
+        margin: auto;
         width: 100%;
         justify-content: center;
         .menu-content-left,
-        .Menu-content-right {
+        .menu-content-right {
             width: 40%;
             padding-left: 70px;
             .food {
                 margin-bottom: 20px;
                 .food-title {
                     display: flex;
-                    .food-title-food {}
                     .food-title-price {
                         position: relative;
                         left: 240px;
@@ -38,6 +34,73 @@
                     margin-top: 6px;
                     font-size: 14px;
                 }
+            }
+        }
+    }
+}
+
+
+/**
+*
+* 
+*/
+
+
+/*----- Tablet -----*/
+
+
+/*Portrait*/
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
+    .menu {
+        display: none;
+    }
+}
+
+
+/*landscape*/
+
+@media (min-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {
+    
+    .menu {
+        margin-bottom: 100px;
+        .menu-content {
+            .menu-content-left,
+            .menu-content-right {
+                width: 447px;
+                padding-left: 20px;
+            }
+        }
+    }
+}
+
+
+/*----- movil -----*/
+
+
+/*Portrait*/
+
+
+/*Default*/
+
+@media (max-width: 575.98px)and (orientation:portrait) {
+    
+    .menu {
+        display: none;
+    }
+}
+
+
+/*landscape*/
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
+    .menu {
+        margin-bottom: 100px;
+        .menu-content {
+            .menu-content-left,
+            .menu-content-right {
+                width: 440px;
+                padding-left: 20px;
             }
         }
     }
