--- a/src/views/Team/_Team.scss
+++ b/src/views/Team/_Team.scss
@@ -1,18 +1,19 @@
-.team{
+@use '../../scss/utilities/variables' as var;
+@use '../../scss/utilities/mixings' as mix;
+.team {
     height: 700px;
     display: flex;
     margin-top: 60px;
     margin-bottom: 100px;
-    .partner-one{
+    .partner-one {
         background-image: url('../../images/partner-one.png');
         background-position-y: -120px;
     }
-    .partner-two{
+    .partner-two {
         background-image: url('../../images/partner-two.png');
         background-position-y: -200px;
     }
-
-    .team-partner{
+    .team-partner {
         width: 45%;
         margin: 5%;
         height: 90%;
@@ -21,15 +22,16 @@
         align-items: center;
         background-size: cover;
         background-repeat: no-repeat;
+        margin-top: 120px;
         clip-path: polygon(16% 7%, 5% 0, 0 0, 0 100%, 17% 100%, 29% 100%, 77% 100%, 100% 100%, 100% 50%, 100% 20%, 100% 0, 27% 0);
-        .team-caption{
+        .team-caption {
             background: white;
             height: 300px;
-            opacity: 0;         
+            opacity: 0;
             position: absolute;
             transition: all .3s;
             display: flex;
-            .team-caption-description{
+            .team-caption-description {
                 width: 80%;
                 margin-left: auto;
                 margin-right: auto;
@@ -43,6 +45,73 @@
                 opacity: .9;
                 cursor: pointer;
             }
+        }
+    }
+}
+
+
+/**
+*
+*
+*/
+
+
+/*----- Tablet -----*/
+
+
+/*Portrait*/
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
+    .team {
+        padding-top: 100px;
+        .partner-two {
+            background-position-y: -120px;
+        }
+    }
+}
+
+
+/*landscape*/
+
+@media (min-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {
+    
+    .team {
+        padding-top: 100px;
+        .partner-two {
+            background-position-y: -120px;
+        }
+    }
+}
+
+
+/*----- movil -----*/
+
+
+/*Portrait*/
+
+
+/*Default*/
+
+@media (max-width: 575.98px)and (orientation:portrait) {
+    
+    .team {
+        margin-top: 150px;
+        display: grid;
+        .team-partner {
+            width: 80%;
+            margin: auto;
+        }
+    }
+}
+
+
+/*landscape*/
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
+    .team {
+        padding-top: 80px;
+        .partner-two {
+            background-position-y: -120px;
         }
     }
 }
