--- a/src/views/UserProfile/_UserProfile.scss
+++ b/src/views/UserProfile/_UserProfile.scss
@@ -61,6 +61,7 @@
         background-color: nth(var.$grey, 2);
         border-radius: 20px;
         .cartShop {
+            width: 60px;
             position: relative;
             font-size: 23px;
             left: 20px;
