--- a/src/views/Home/_Home.scss
+++ b/src/views/Home/_Home.scss
@@ -101,6 +101,15 @@
 
 /*----- Escritorio -----*/
 
+@media (min-width: 1400px){
+    .home-content,
+    .home-body-presentation,
+    .home-footer-hour {
+        max-width: 1800px;
+    }
+    
+}
+
 @media (min-width: 1199.98px) {}
 
 
