--- a/src/views/Menu/_Menu.scss
+++ b/src/views/Menu/_Menu.scss
@@ -25,9 +25,10 @@
                 margin-bottom: 20px;
                 .food-title {
                     display: flex;
+                    justify-content: space-between;
                     .food-title-price {
                         position: relative;
-                        left: 240px;
+                        padding-right: 70px;
                     }
                 }
                 .food-description {
