--- a/src/views/UserProfile/_UserProfile.scss
+++ b/src/views/UserProfile/_UserProfile.scss
@@ -1,22 +1,22 @@
 @use '../../scss/utilities/variables' as var;
 @use '../../scss/utilities/mixings' as mix;
-
 .profile {
     display: flex;
-    width: 1440px;
+    width: 100%;
     height: 800px;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
     .profile-panel {
-        width: 10%;
+        width: 12%;
         .profile-panel-center {
             margin: auto;
-            width: 80%;
+            width: auto;
             .logo {
                 background-image: url('../../images/logo.png');
                 width: 80px;
                 height: 80px;
-                margin: 0px auto 70px auto;
+                margin: 10px auto 70px auto;
                 background-size: 100%;
             }
             .link {
@@ -30,12 +30,12 @@
                     text-align: left;
                     cursor: pointer;
                     padding: 5px;
+                    padding-left: 30px;
                     &:hover {
                         background-color: nth(var.$grey, 2);
-                        //background-color: cadetblue;
                         color: white;
                     }
-                    .link-em{
+                    .link-em {
                         margin-left: 18px;
                     }
                 }
@@ -43,42 +43,35 @@
             .delete-acount {
                 text-align: center;
                 cursor: pointer;
-                position: relative;
-                top: 100px;
+                position:absolute;
+                bottom: 20px;
+                left: 5px;
+                width: 170px;
                 &:hover,
                 .link:hover {
                     color: red;
                 }
+                .link-em{
+                    margin-left: 20px;
+                }
             }
         }
     }
-    .profile-content {
+    .profile-content{
         width: 70%;
+        height: 750px;
+        overflow: scroll;
     }
     .profile-user,
     .profile-admin {
         width: 20%;
         background-color: nth(var.$grey, 2);
         border-radius: 20px;
-        .cartShop {
-            width: 60px;
-            position: relative;
-            font-size: 23px;
-            left: 20px;
-            top: 26px;
-            cursor: pointer;
-            a {
-                color: black;
-                text-decoration: none;
-                &:hover {
-                    color: white;
-                }
-            }
-        }
+        
         .exit {
-            position: relative;
-            left: 229px;
-            bottom: 6px;
+            position: absolute;
+            right: 20px;
+            top: 23px;
             font-size: 23px;
             width: 18px;
             cursor: pointer;
@@ -88,10 +81,23 @@
         }
         .profile-user-panel,
         .profile-admin-panel {
-            //background: antiquewhite;
-            margin: 60px auto 80px auto;
+            margin: 90px auto 80px auto;
             text-align: center;
             width: 90%;
+            .cartShop {
+                width: 60px;
+                position: relative;
+                font-size: 23px;
+                bottom: 60px;
+                cursor: pointer;
+                a {
+                    color: black;
+                    text-decoration: none;
+                    &:hover {
+                        color: white;
+                    }
+                }
+            }
             .user-image,
             .admin-image {
                 background-image: url('../../images/user-image.png');
@@ -102,8 +108,8 @@
                 background-size: 120px;
             }
             .user-data,
-            .admin-data{
-                width: 200px;
+            .admin-data {
+                width: auto;;
                 margin: 30px auto 30px auto;
                 margin-top: 30px;
                 margin-bottom: 20px;
@@ -122,9 +128,203 @@
             background-size: cover;
         }
     }
-    .profile-admin{
-        .exit{
+    .profile-admin {
+        .exit {
             top: 20px;
+        }
+    }
+}
+
+
+/**
+MEDIA-QUERY
+**/
+
+
+/*----- Escritorio -----*/
+@media (min-width: 1440.98px) {
+    .profile {
+        background: violet;
+    }
+    .profile {
+        width: 1440px;
+        margin-top: 5%;
+        margin-bottom: 5%;
+        height: 90%;
+    }
+}
+
+@media (min-width: 1199.98px) and (max-width:1440px) {
+    .profile {
+        //background: red;
+    }
+    .profile {
+    }
+}
+
+
+/*----- Tablet -----*/
+
+
+/*Portrait*/
+
+@media (min-width: 576px) and (max-width: 1198.98px) and (orientation:portrait) {
+    .profile {
+        background: orange;
+        .profile-panel{
+            .profile-panel-center{
+                .link{
+                    .button-panel-profile{
+                        display: grid;
+                        text-align: center;
+                        padding-left: 0px;
+                        .link-em{
+                            margin-left: 0px;
+                        }
+                        .svg-inline--fa{
+                            width: auto;
+                            margin: auto;
+                        }
+                    }
+                }
+            }
+        }
+        .profile-user{
+            .profile-user-panel,
+            .profile-admin-panel{
+            }
+            .profile-user-qr,
+            .profile-admin-qr{
+                width: 60px;
+                height: 60px;
+            }
+        }
+    }
+}
+
+
+/*landscape*/
+
+@media (min-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {
+    .profile {
+        background: blue;
+        .profile-panel{
+            .profile-panel-center{
+                .link{
+                    .button-panel-profile{
+                        display: grid;
+                        text-align: center;
+                        padding-left: 0px;
+                        .link-em{
+                            margin-left: 0px;
+                        }
+                        .svg-inline--fa{
+                            width: auto;
+                            margin: auto;
+                        }
+                    }
+                }
+            }
+
+        }
+    }
+}
+
+
+/*----- movil -----*/
+
+
+/*Portrait*/
+
+
+/*Default*/
+
+@media (max-width: 575.98px)and (orientation:portrait) {
+    .profile {
+        //background: green;
+        .profile-panel{
+            .profile-panel-center{
+                .logo{
+                    width: 60px;
+                    height: 60px;
+                }
+                .link{
+                    .button-panel-profile{
+                        display: grid;
+                        text-align: center;
+                        padding-left: 0px;
+                        .link-em{
+                            margin-left: 0px;
+                        }
+                        .svg-inline--fa{
+                            width: auto;
+                            margin: auto;
+                        }
+                    }
+                    .btn-home{
+                        background: orange;
+                        margin-bottom: 0px;
+                    }
+                }
+            }
+
+        }
+        .profile-user{
+            .exit{
+                right: 40px;
+            }
+            .profile-user-panel,
+            .profile-admin-panel{
+                margin-top: 160px;
+                margin-bottom: 140px;
+                .user-email{
+                    display: none;
+                }
+                .cartShop{
+                    top: 60px;
+                    right: 23px;
+                    width: 50px;
+                    position: absolute;
+                }
+                .user-image{
+                    width: 60px;
+                    height: 40px;
+                    background-size: cover;
+                }
+            }
+            .profile-user-qr,
+            .profile-admin-qr{
+                width: 60px;
+                height: 60px;
+            }
+        }
+    }
+}
+
+
+/*landscape*/
+
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
+    .profile {
+        background: black;
+        .profile-panel{
+            .profile-panel-center{
+                .link{
+                    .button-panel-profile{
+                        display: grid;
+                        text-align: center;
+                        padding-left: 0px;
+                        .link-em{
+                            margin-left: 0px;
+                        }
+                        .svg-inline--fa{
+                            width: auto;
+                            margin: auto;
+                        }
+                    }
+                }
+            }
+
         }
     }
 }
